// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown should override HTML tags with React components 1`] = `
.circuit-0 {
  font-weight: 400;
  margin-bottom: 16px;
  font-size: 15px;
  line-height: 24px;
}

@media (min-width:480px) {
  .circuit-0 {
    font-size: 15px;
    line-height: 24px;
  }
}

<div>
  <h1
    id="manu-illa-amorem-committere-exit-membra-minor"
  >
    Manu illa amorem committere exit membra minor
  </h1>
  <h2
    id="utraque-aut-longe-ore-cruentum-est"
  >
    Utraque aut longe ore cruentum est
  </h2>
  <p
    className=" circuit-0 circuit-1"
  >
    Lorem markdownum vultusque eligit significent sinistro, et virgis, inter!
Rapuere Apollineam equas coloni urbis conata, 
    <em>
      Theti
    </em>
    , colla simul latus magis
et magnis prorumpit flere? Dura quantum.
  </p>
  <h3
    id="indignantia-tamen"
  >
    Indignantia tamen
  </h3>
  <p
    className=" circuit-0 circuit-1"
  >
    Mediis monstravit inmunis Troes non leonis 
    <strong>
      non
    </strong>
     externis cuncta inperfecta
mihi 
    <a
      href="http://etluteave.net/"
    >
      aristas colligit
    </a>
     sacros, diu. Se prius
praecordiaque velut totosque norant alipedi candida electae est vestis, posse.
  </p>
  <blockquote>
    <p
      className=" circuit-0 circuit-1"
    >
      Adstat Procnes et, in tempora Maenalon moles in nocte relicta, membra nec
sudore nymphas robur! Adduxit sua equus Cadmeida 
      <strong>
        egimus
      </strong>
       calathis ostendit
quicquid ad heros. Usus atque, et talisque sum; quin ramis sectamque amore
texerat Troada. Dedit murmure de iuvenis peraravit, addunt nihil; est est
ostendens fer cum illa 
      <strong>
        Galanthida
      </strong>
      . Posset aliisque: enim tibi confinia
terraeque gratus quaque, liquidumque quod: magnum mixta;

      <a
        href="http://priusiuno.org/cur.aspx"
      >
        sicco
      </a>
      .
    </p>
  </blockquote>
  <h3
    id="dumque-et-membris-minas-deprimeret-phrygiis-sua"
  >
    Dumque et membris minas deprimeret Phrygiis sua
  </h3>
  <p
    className=" circuit-0 circuit-1"
  >
    Mundus pugno, geniti sic muros Notum tu ad motis; nobis mihi tangi dextra?

    <strong>
      Signans Trinacris errat
    </strong>
     attonitoque spicis magistra odioque, aera palus
altum, ense pectora socerumque! Et ipsum vix bis sibi, sitim, aras praemia 
    <em>
      qua
quosque
    </em>
    , adde alma. Ait dixit suas gnatis ab facies altera nova 
    <strong>
      flentemque
teneo
    </strong>
    : quoque profusis consequitur delusa et. Consistere adeunt.
  </p>
  <h3
    id="develat-nymphae"
  >
    Develat nymphae
  </h3>
  <p
    className=" circuit-0 circuit-1"
  >
    Conceperat depositae si manibus utiliter resonare vitat ima mortis ecce. Huic
leni agat pro! Fuit relinque.
  </p>
  <ol
    start={1}
  >
    <li>
      Quodque nebulas turba orbem aut
    </li>
    <li>
      Nymphae lapsasque
    </li>
    <li>
      Regoque tenere
    </li>
  </ol>
  <h2
    id="circumstant-iam-reponere-obibat-indestrictus-sine"
  >
    Circumstant iam reponere obibat indestrictus sine
  </h2>
  <p
    className=" circuit-0 circuit-1"
  >
    <img
      alt="A random cute puppy"
      src="http://www.placepuppy.net/800/500"
    />
  </p>
  <p
    className=" circuit-0 circuit-1"
  >
    Parte quam aequore, nebulas demisere. Iurgia venit finxit nec manibus tamen
cultus coniunx adituque.
  </p>
</div>
`;

exports[`Markdown should parse and render Markdown to HTML 1`] = `
<div>
  <h1
    id="manu-illa-amorem-committere-exit-membra-minor"
  >
    Manu illa amorem committere exit membra minor
  </h1>
  <h2
    id="utraque-aut-longe-ore-cruentum-est"
  >
    Utraque aut longe ore cruentum est
  </h2>
  <p>
    Lorem markdownum vultusque eligit significent sinistro, et virgis, inter!
Rapuere Apollineam equas coloni urbis conata, 
    <em>
      Theti
    </em>
    , colla simul latus magis
et magnis prorumpit flere? Dura quantum.
  </p>
  <h3
    id="indignantia-tamen"
  >
    Indignantia tamen
  </h3>
  <p>
    Mediis monstravit inmunis Troes non leonis 
    <strong>
      non
    </strong>
     externis cuncta inperfecta
mihi 
    <a
      href="http://etluteave.net/"
    >
      aristas colligit
    </a>
     sacros, diu. Se prius
praecordiaque velut totosque norant alipedi candida electae est vestis, posse.
  </p>
  <blockquote>
    <p>
      Adstat Procnes et, in tempora Maenalon moles in nocte relicta, membra nec
sudore nymphas robur! Adduxit sua equus Cadmeida 
      <strong>
        egimus
      </strong>
       calathis ostendit
quicquid ad heros. Usus atque, et talisque sum; quin ramis sectamque amore
texerat Troada. Dedit murmure de iuvenis peraravit, addunt nihil; est est
ostendens fer cum illa 
      <strong>
        Galanthida
      </strong>
      . Posset aliisque: enim tibi confinia
terraeque gratus quaque, liquidumque quod: magnum mixta;

      <a
        href="http://priusiuno.org/cur.aspx"
      >
        sicco
      </a>
      .
    </p>
  </blockquote>
  <h3
    id="dumque-et-membris-minas-deprimeret-phrygiis-sua"
  >
    Dumque et membris minas deprimeret Phrygiis sua
  </h3>
  <p>
    Mundus pugno, geniti sic muros Notum tu ad motis; nobis mihi tangi dextra?

    <strong>
      Signans Trinacris errat
    </strong>
     attonitoque spicis magistra odioque, aera palus
altum, ense pectora socerumque! Et ipsum vix bis sibi, sitim, aras praemia 
    <em>
      qua
quosque
    </em>
    , adde alma. Ait dixit suas gnatis ab facies altera nova 
    <strong>
      flentemque
teneo
    </strong>
    : quoque profusis consequitur delusa et. Consistere adeunt.
  </p>
  <h3
    id="develat-nymphae"
  >
    Develat nymphae
  </h3>
  <p>
    Conceperat depositae si manibus utiliter resonare vitat ima mortis ecce. Huic
leni agat pro! Fuit relinque.
  </p>
  <ol
    start={1}
  >
    <li>
      Quodque nebulas turba orbem aut
    </li>
    <li>
      Nymphae lapsasque
    </li>
    <li>
      Regoque tenere
    </li>
  </ol>
  <h2
    id="circumstant-iam-reponere-obibat-indestrictus-sine"
  >
    Circumstant iam reponere obibat indestrictus sine
  </h2>
  <p>
    <img
      alt="A random cute puppy"
      src="http://www.placepuppy.net/800/500"
    />
  </p>
  <p>
    Parte quam aequore, nebulas demisere. Iurgia venit finxit nec manibus tamen
cultus coniunx adituque.
  </p>
</div>
`;

exports[`Markdown should transform the Markdown before parsing it 1`] = `
<div>
  <h2
    id="manu-illa-amorem-committere-exit-membra-minor"
  >
    Manu illa amorem committere exit membra minor
  </h2>
  <h4
    id="utraque-aut-longe-ore-cruentum-est"
  >
    Utraque aut longe ore cruentum est
  </h4>
  <p>
    Lorem markdownum vultusque eligit significent sinistro, et virgis, inter!
Rapuere Apollineam equas coloni urbis conata, 
    <em>
      Theti
    </em>
    , colla simul latus magis
et magnis prorumpit flere? Dura quantum.
  </p>
  <h6
    id="indignantia-tamen"
  >
    Indignantia tamen
  </h6>
  <p>
    Mediis monstravit inmunis Troes non leonis 
    <strong>
      non
    </strong>
     externis cuncta inperfecta
mihi 
    <a
      href="http://etluteave.net/"
    >
      aristas colligit
    </a>
     sacros, diu. Se prius
praecordiaque velut totosque norant alipedi candida electae est vestis, posse.
  </p>
  <blockquote>
    <p>
      Adstat Procnes et, in tempora Maenalon moles in nocte relicta, membra nec
sudore nymphas robur! Adduxit sua equus Cadmeida 
      <strong>
        egimus
      </strong>
       calathis ostendit
quicquid ad heros. Usus atque, et talisque sum; quin ramis sectamque amore
texerat Troada. Dedit murmure de iuvenis peraravit, addunt nihil; est est
ostendens fer cum illa 
      <strong>
        Galanthida
      </strong>
      . Posset aliisque: enim tibi confinia
terraeque gratus quaque, liquidumque quod: magnum mixta;

      <a
        href="http://priusiuno.org/cur.aspx"
      >
        sicco
      </a>
      .
    </p>
  </blockquote>
  <h6
    id="dumque-et-membris-minas-deprimeret-phrygiis-sua"
  >
    Dumque et membris minas deprimeret Phrygiis sua
  </h6>
  <p>
    Mundus pugno, geniti sic muros Notum tu ad motis; nobis mihi tangi dextra?

    <strong>
      Signans Trinacris errat
    </strong>
     attonitoque spicis magistra odioque, aera palus
altum, ense pectora socerumque! Et ipsum vix bis sibi, sitim, aras praemia 
    <em>
      qua
quosque
    </em>
    , adde alma. Ait dixit suas gnatis ab facies altera nova 
    <strong>
      flentemque
teneo
    </strong>
    : quoque profusis consequitur delusa et. Consistere adeunt.
  </p>
  <h6
    id="develat-nymphae"
  >
    Develat nymphae
  </h6>
  <p>
    Conceperat depositae si manibus utiliter resonare vitat ima mortis ecce. Huic
leni agat pro! Fuit relinque.
  </p>
  <ol
    start={1}
  >
    <li>
      Quodque nebulas turba orbem aut
    </li>
    <li>
      Nymphae lapsasque
    </li>
    <li>
      Regoque tenere
    </li>
  </ol>
  <h4
    id="circumstant-iam-reponere-obibat-indestrictus-sine"
  >
    Circumstant iam reponere obibat indestrictus sine
  </h4>
  <p>
    <img
      alt="A random cute puppy"
      src="http://www.placepuppy.net/800/500"
    />
  </p>
  <p>
    Parte quam aequore, nebulas demisere. Iurgia venit finxit nec manibus tamen
cultus coniunx adituque.
  </p>
</div>
`;

exports[`Markdown should treat all markdown strings as "block" elements. 1`] = `
<div>
  <h1
    id="manu-illa-amorem-committere-exit-membra-minor"
  >
    Manu illa amorem committere exit membra minor
  </h1>
  <h2
    id="utraque-aut-longe-ore-cruentum-est"
  >
    Utraque aut longe ore cruentum est
  </h2>
  <p>
    Lorem markdownum vultusque eligit significent sinistro, et virgis, inter!
Rapuere Apollineam equas coloni urbis conata, 
    <em>
      Theti
    </em>
    , colla simul latus magis
et magnis prorumpit flere? Dura quantum.
  </p>
  <h3
    id="indignantia-tamen"
  >
    Indignantia tamen
  </h3>
  <p>
    Mediis monstravit inmunis Troes non leonis 
    <strong>
      non
    </strong>
     externis cuncta inperfecta
mihi 
    <a
      href="http://etluteave.net/"
    >
      aristas colligit
    </a>
     sacros, diu. Se prius
praecordiaque velut totosque norant alipedi candida electae est vestis, posse.
  </p>
  <blockquote>
    <p>
      Adstat Procnes et, in tempora Maenalon moles in nocte relicta, membra nec
sudore nymphas robur! Adduxit sua equus Cadmeida 
      <strong>
        egimus
      </strong>
       calathis ostendit
quicquid ad heros. Usus atque, et talisque sum; quin ramis sectamque amore
texerat Troada. Dedit murmure de iuvenis peraravit, addunt nihil; est est
ostendens fer cum illa 
      <strong>
        Galanthida
      </strong>
      . Posset aliisque: enim tibi confinia
terraeque gratus quaque, liquidumque quod: magnum mixta;

      <a
        href="http://priusiuno.org/cur.aspx"
      >
        sicco
      </a>
      .
    </p>
  </blockquote>
  <h3
    id="dumque-et-membris-minas-deprimeret-phrygiis-sua"
  >
    Dumque et membris minas deprimeret Phrygiis sua
  </h3>
  <p>
    Mundus pugno, geniti sic muros Notum tu ad motis; nobis mihi tangi dextra?

    <strong>
      Signans Trinacris errat
    </strong>
     attonitoque spicis magistra odioque, aera palus
altum, ense pectora socerumque! Et ipsum vix bis sibi, sitim, aras praemia 
    <em>
      qua
quosque
    </em>
    , adde alma. Ait dixit suas gnatis ab facies altera nova 
    <strong>
      flentemque
teneo
    </strong>
    : quoque profusis consequitur delusa et. Consistere adeunt.
  </p>
  <h3
    id="develat-nymphae"
  >
    Develat nymphae
  </h3>
  <p>
    Conceperat depositae si manibus utiliter resonare vitat ima mortis ecce. Huic
leni agat pro! Fuit relinque.
  </p>
  <ol
    start={1}
  >
    <li>
      Quodque nebulas turba orbem aut
    </li>
    <li>
      Nymphae lapsasque
    </li>
    <li>
      Regoque tenere
    </li>
  </ol>
  <h2
    id="circumstant-iam-reponere-obibat-indestrictus-sine"
  >
    Circumstant iam reponere obibat indestrictus sine
  </h2>
  <p>
    <img
      alt="A random cute puppy"
      src="http://www.placepuppy.net/800/500"
    />
  </p>
  <p>
    Parte quam aequore, nebulas demisere. Iurgia venit finxit nec manibus tamen
cultus coniunx adituque.
  </p>
</div>
`;

exports[`Markdown should treat all markdown strings as "inline" elements. 1`] = `
<span>
  # Manu illa amorem committere exit membra minor

## Utraque aut longe ore cruentum est

Lorem markdownum vultusque eligit significent sinistro, et virgis, inter!
Rapuere Apollineam equas coloni urbis conata, 
  <em>
    Theti
  </em>
  , colla simul latus magis
et magnis prorumpit flere? Dura quantum.

### Indignantia tamen

Mediis monstravit inmunis Troes non leonis 
  <strong>
    non
  </strong>
   externis cuncta inperfecta
mihi 
  <a
    href="http://etluteave.net/"
  >
    aristas colligit
  </a>
   sacros, diu. Se prius
praecordiaque velut totosque norant alipedi candida electae est vestis, posse.

&gt; Adstat Procnes et, in tempora Maenalon moles in nocte relicta, membra nec
&gt; sudore nymphas robur! Adduxit sua equus Cadmeida 
  <strong>
    egimus
  </strong>
   calathis ostendit
&gt; quicquid ad heros. Usus atque, et talisque sum; quin ramis sectamque amore
&gt; texerat Troada. Dedit murmure de iuvenis peraravit, addunt nihil; est est
&gt; ostendens fer cum illa 
  <strong>
    Galanthida
  </strong>
  . Posset aliisque: enim tibi confinia
&gt; terraeque gratus quaque, liquidumque quod: magnum mixta;
&gt; 
  <a
    href="http://priusiuno.org/cur.aspx"
  >
    sicco
  </a>
  .

### Dumque et membris minas deprimeret Phrygiis sua

Mundus pugno, geniti sic muros Notum tu ad motis; nobis mihi tangi dextra?

  <strong>
    Signans Trinacris errat
  </strong>
   attonitoque spicis magistra odioque, aera palus
altum, ense pectora socerumque! Et ipsum vix bis sibi, sitim, aras praemia 
  <em>
    qua
quosque
  </em>
  , adde alma. Ait dixit suas gnatis ab facies altera nova 
  <strong>
    flentemque
teneo
  </strong>
  : quoque profusis consequitur delusa et. Consistere adeunt.

### Develat nymphae

Conceperat depositae si manibus utiliter resonare vitat ima mortis ecce. Huic
leni agat pro! Fuit relinque.

1. Quodque nebulas turba orbem aut
2. Nymphae lapsasque
3. Regoque tenere

## Circumstant iam reponere obibat indestrictus sine


  <img
    alt="A random cute puppy"
    src="http://www.placepuppy.net/800/500"
  />
  

Parte quam aequore, nebulas demisere. Iurgia venit finxit nec manibus tamen
cultus coniunx adituque.
</span>
`;
